# Gitr

./: Cargo.toml  README.md
crates/gitr-auth/: Cargo.toml
crates/gitr-auth/src/: lib.rs
crates/gitr-cli/: Cargo.toml
crates/gitr-cli/src/: main.rs
crates/gitr-cli/src/commands/: config.rs  history.rs  host.rs  mod.rs  repo.rs  scan.rs  status.rs  sync.rs
crates/gitr-cli/tests/: integration.rs
crates/gitr-core/: Cargo.toml
crates/gitr-core/src/: config.rs  error.rs
crates/gitr-core/src/models/: collection.rs  host.rs  mod.rs  repo.rs  sync_link.rs  sync_state.rs
crates/gitr-db/: Cargo.toml
crates/gitr-db/src/: lib.rs  migration.rs  ops.rs  schema.rs
crates/gitr-discover/: Cargo.toml
crates/gitr-discover/src/: lib.rs  reconcile.rs  scanner.rs
crates/gitr-host/: Cargo.toml
crates/gitr-host/src/: azure_devops.rs  bitbucket.rs  gitea.rs  github.rs  gitlab.rs  lib.rs
crates/gitr-sync/: Cargo.toml
crates/gitr-sync/src/: engine.rs  fork_sync.rs  git_ops.rs  lib.rs
